--- a/client/views/header/header.html
+++ b/client/views/header/header.html
@@ -45,7 +45,7 @@
           <li>
             <a href="{{#if link}}{{link}}{{else}}{{ pathFor 'mailbox' }}?id={{_id}}#alerts{{/if}}">
               <div>
-                <i class="fa fa-{{type}} fa-fw"></i> New {{stringTitle type}}
+                <i class="fa fa-{{type}} fa-fw"></i> New {{type}}
                 <span class="pull-right text-muted small">{{fromNow timeStampe}}</span>
                 <p class="text-muted small">
                   <strong>{{fromName}}</strong> tagged you in a {{type}}.
